--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>عرض الروابط</title>
-  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
+  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div class="container mt-4 text-center">
-    <img src="https://app.iu.edu.jo/cf/images/iu.png" alt="Icon" class="page-icon">
+   <img src="https://www.dropbox.com/scl/fi/oyzy2tgfu9ky706mxdo2r/my-website-logo2.png?rlkey=8dqbogpfme5xlttdnululptlo&e=1&st=7kv0fd0c&dl=1" alt="Icon" class="page-icon">
     <h2 class="mb-4">عرض الروابط</h2>
 
     <div class="table-responsive">
