--- a/public/edit.html
+++ b/public/edit.html
@@ -141,205 +141,205 @@
   </div>
 
   <!-- استدعاء نافذة تسجيل الدخول -->
-  <div id="loginContainer"></div>
+  <div id="loginModalContainer"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
-let videos = [];
-let departments = [];
-let quill = new Quill('#editor', {
-  theme: 'snow',
-  modules: {
-    toolbar: [
-      ['bold', 'italic', 'underline'],
-      [{ 'list': 'ordered' }, { 'list': 'bullet' }],
-      ['link', 'image'],
-      [{ 'direction': 'rtl' }],
-      ['clean']
-    ]
-  }
-});
-
-async function fetchDepartments() {
-  try {
-    const res = await fetch(`${API_BASE}/api/departments`);
-    departments = await res.json();
-  } catch (err) {
-    console.error('فشل تحميل الأقسام:', err);
-  }
-}
-
-function populateDeptSelect(selectElement, selectedValue = '') {
-  selectElement.innerHTML = '<option value="">-- اختر القسم --</option>';
-  departments.forEach(dep => {
-    const option = document.createElement('option');
-    option.value = dep.name;
-    option.textContent = dep.name;
-    if (dep.name === selectedValue) option.selected = true;
-    selectElement.appendChild(option);
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  <script>
+  const API_BASE = 'https://video-dashboard-backend.onrender.com';
+  let videos = [];
+  let departments = [];
+  let quill = new Quill('#editor', {
+    theme: 'snow',
+    modules: {
+      toolbar: [
+        ['bold', 'italic', 'underline'],
+        [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+        ['link', 'image'],
+        [{ 'direction': 'rtl' }],
+        ['clean']
+      ]
+    }
   });
-}
 
-async function fetchVideos() {
-  const res = await fetch(`${API_BASE}/api/videos`);
-  videos = await res.json();
-  populateDepartmentOptions();
-}
+  // ✅ تحميل نافذة تسجيل الدخول كما في dashboard.html
+  fetch("login-modal.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("loginModalContainer").innerHTML = html;
+    });
 
-function populateDepartmentOptions() {
-  const departmentCounts = videos.reduce((acc, video) => {
-    const dep = video.department;
-    acc[dep] = (acc[dep] || 0) + 1;
-    return acc;
-  }, {});
-  const departmentSelect = document.getElementById('departmentSelect');
-  departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
-  Object.entries(departmentCounts).forEach(([dept, count]) => {
-    const option = document.createElement('option');
-    option.value = dept;
-    option.textContent = `${dept} (${count})`;
-    departmentSelect.appendChild(option);
-  });
-}
-
-function renderVideos() {
-  const department = document.getElementById('departmentSelect').value;
-  const query = document.getElementById('searchInput').value.trim().toLowerCase();
-  const container = document.getElementById('videoContainer');
-  container.innerHTML = '';
-  if (!department) return;
-
-  const filtered = videos.filter(v =>
-    v.department?.trim().toLowerCase() === department.trim().toLowerCase() &&
-    (v.title?.toLowerCase().includes(query) || v.description?.toLowerCase().includes(query))
-  );
-
-  if (filtered.length === 0) {
-    container.innerHTML = '<p class="text-muted">🚫 لا توجد فيديوهات مطابقة</p>';
-    return;
+  async function fetchDepartments() {
+    try {
+      const res = await fetch(`${API_BASE}/api/departments`);
+      departments = await res.json();
+    } catch (err) {
+      console.error('فشل تحميل الأقسام:', err);
+    }
   }
 
-  filtered.forEach(video => {
-    const card = document.createElement('div');
-    card.className = 'video-card';
+  function populateDeptSelect(selectElement, selectedValue = '') {
+    selectElement.innerHTML = '<option value="">-- اختر القسم --</option>';
+    departments.forEach(dep => {
+      const option = document.createElement('option');
+      option.value = dep.name;
+      option.textContent = dep.name;
+      if (dep.name === selectedValue) option.selected = true;
+      selectElement.appendChild(option);
+    });
+  }
 
-    const title = `<div class="video-title">عنوان الفيديو: ${video.title}</div>`;
-    const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.title)}', '${escapeHtml(video.description)}')">وصف الفيديو: ${video.description}</div>`;
+  async function fetchVideos() {
+    const res = await fetch(`${API_BASE}/api/videos`);
+    videos = await res.json();
+    populateDepartmentOptions();
+  }
 
-    const link = video.link || video.url || '';
-    let media = '';
-    let popoutLink = link;
+  function populateDepartmentOptions() {
+    const departmentCounts = videos.reduce((acc, video) => {
+      const dep = video.department;
+      acc[dep] = (acc[dep] || 0) + 1;
+      return acc;
+    }, {});
+    const departmentSelect = document.getElementById('departmentSelect');
+    departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+    Object.entries(departmentCounts).forEach(([dept, count]) => {
+      const option = document.createElement('option');
+      option.value = dept;
+      option.textContent = `${dept} (${count})`;
+      departmentSelect.appendChild(option);
+    });
+  }
 
-    if (link.includes('youtube.com') || link.includes('youtu.be')) {
-      media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(link)}" allowfullscreen></iframe>`;
-    } else if (link.includes('drive.google.com/file/d/')) {
-      const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
-      if (match) {
-        media = `<iframe src="https://drive.google.com/file/d/${match[1]}/preview" allowfullscreen></iframe>`;
-      } else {
-        media = `<video controls src="${link}"></video>`;
-      }
-    } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
-      media = `<iframe class="sharepoint-frame" src="${link}" allowfullscreen></iframe>`;
-      const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
-      if (uniqueIdMatch) {
-        popoutLink = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/stream.aspx?UniqueId=${uniqueIdMatch[1]}`;
-      }
-    } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
-      const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
-      if (uniqueIdMatch) {
-        const embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
-        media = `<iframe class="sharepoint-frame" src="${embedUrl}" allowfullscreen></iframe>`;
-        popoutLink = link;
-      } else {
-        media = `<video controls src="${link}"></video>`;
-      }
-    } else {
-      media = `<video controls src="${link}"></video>`;
+  function renderVideos() {
+    const department = document.getElementById('departmentSelect').value;
+    const query = document.getElementById('searchInput').value.trim().toLowerCase();
+    const container = document.getElementById('videoContainer');
+    container.innerHTML = '';
+    if (!department) return;
+
+    const filtered = videos.filter(v =>
+      v.department?.trim().toLowerCase() === department.trim().toLowerCase() &&
+      (v.title?.toLowerCase().includes(query) || v.description?.toLowerCase().includes(query))
+    );
+
+    if (filtered.length === 0) {
+      container.innerHTML = '<p class="text-muted">🚫 لا توجد فيديوهات مطابقة</p>';
+      return;
     }
 
-    const popout = `<button class="popout-button" onclick="window.open('${popoutLink}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
-    const actions = `
-      <div class="action-buttons">
-        <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
-        <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
-      </div>
-    `;
+    filtered.forEach(video => {
+      const card = document.createElement('div');
+      card.className = 'video-card';
 
-    card.innerHTML = title + description + media + popout + actions;
-    container.appendChild(card);
+      const title = `<div class="video-title">عنوان الفيديو: ${video.title}</div>`;
+      const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.title)}', '${escapeHtml(video.description)}')">وصف الفيديو: ${video.description}</div>`;
+
+      const link = video.link || video.url || '';
+      let media = '';
+      let popoutLink = link;
+
+      if (link.includes('youtube.com') || link.includes('youtu.be')) {
+        media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(link)}" allowfullscreen></iframe>`;
+      } else if (link.includes('drive.google.com/file/d/')) {
+        const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
+        if (match) {
+          media = `<iframe src="https://drive.google.com/file/d/${match[1]}/preview" allowfullscreen></iframe>`;
+        } else {
+          media = `<video controls src="${link}"></video>`;
+        }
+      } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
+        media = `<iframe class="sharepoint-frame" src="${link}" allowfullscreen></iframe>`;
+        const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
+        if (uniqueIdMatch) {
+          popoutLink = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/stream.aspx?UniqueId=${uniqueIdMatch[1]}`;
+        }
+      } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
+        const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
+        if (uniqueIdMatch) {
+          const embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
+          media = `<iframe class="sharepoint-frame" src="${embedUrl}" allowfullscreen></iframe>`;
+          popoutLink = link;
+        } else {
+          media = `<video controls src="${link}"></video>`;
+        }
+      } else {
+        media = `<video controls src="${link}"></video>`;
+      }
+
+      const popout = `<button class="popout-button" onclick="window.open('${popoutLink}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
+      const actions = `
+        <div class="action-buttons">
+          <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
+          <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
+        </div>
+      `;
+
+      card.innerHTML = title + description + media + popout + actions;
+      container.appendChild(card);
+    });
+  }
+
+  function escapeHtml(text) {
+    return text?.replace(/"/g, '&quot;').replace(/'/g, '&#39;') || '';
+  }
+
+  function extractYouTubeID(url) {
+    const match = url.match(/[?&]v=([^&#]*)|youtu\.be\/([^&#]*)/);
+    return match ? (match[1] || match[2]) : '';
+  }
+
+  function showDescription(title, desc) {
+    document.getElementById('descTitle').textContent = title;
+    document.getElementById('descContent').innerHTML = desc;
+    const modal = new bootstrap.Modal(document.getElementById('descModal'));
+    modal.show();
+  }
+
+  async function openEditModal(id) {
+    await fetchDepartments();
+    const video = videos.find(v => v._id === id);
+    document.getElementById('editId').value = video._id;
+    document.getElementById('editTitle').value = video.title;
+    document.getElementById('editUrl').value = video.url;
+    quill.root.innerHTML = video.description || '';
+    populateDeptSelect(document.getElementById('editDeptSelect'), video.department);
+    const modal = new bootstrap.Modal(document.getElementById('editModal'));
+    modal.show();
+  }
+
+  async function saveEdit() {
+    const id = document.getElementById('editId').value;
+    const updated = {
+      title: document.getElementById('editTitle').value,
+      description: quill.root.innerHTML,
+      url: document.getElementById('editUrl').value,
+      department: document.getElementById('editDeptSelect').value
+    };
+    await fetch(`${API_BASE}/api/videos/${id}`, {
+      method: 'PUT',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(updated)
+    });
+    alert('✅ تم حفظ التعديلات');
+    fetchVideos();
+    bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
+  }
+
+  async function deleteVideo(id) {
+    if (!confirm('❌ هل أنت متأكد من حذف هذا الفيديو؟')) return;
+    await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
+    alert('🗑️ تم حذف الفيديو');
+    fetchVideos();
+  }
+
+  document.getElementById('departmentSelect').addEventListener('change', () => {
+    document.getElementById('searchInput').disabled = false;
+    renderVideos();
   });
-}
+  document.getElementById('searchInput').addEventListener('input', renderVideos);
 
-function escapeHtml(text) {
-  return text?.replace(/"/g, '&quot;').replace(/'/g, '&#39;') || '';
-}
-
-function extractYouTubeID(url) {
-  const match = url.match(/[?&]v=([^&#]*)|youtu\.be\/([^&#]*)/);
-  return match ? (match[1] || match[2]) : '';
-}
-
-function showDescription(title, desc) {
-  document.getElementById('descTitle').textContent = title;
-  document.getElementById('descContent').innerHTML = desc;
-  const modal = new bootstrap.Modal(document.getElementById('descModal'));
-  modal.show();
-}
-
-async function openEditModal(id) {
-  await fetchDepartments();
-  const video = videos.find(v => v._id === id);
-  document.getElementById('editId').value = video._id;
-  document.getElementById('editTitle').value = video.title;
-  document.getElementById('editUrl').value = video.url;
-  quill.root.innerHTML = video.description || '';
-  populateDeptSelect(document.getElementById('editDeptSelect'), video.department);
-  const modal = new bootstrap.Modal(document.getElementById('editModal'));
-  modal.show();
-}
-
-async function saveEdit() {
-  const id = document.getElementById('editId').value;
-  const updated = {
-    title: document.getElementById('editTitle').value,
-    description: quill.root.innerHTML,
-    url: document.getElementById('editUrl').value,
-    department: document.getElementById('editDeptSelect').value
-  };
-  await fetch(`${API_BASE}/api/videos/${id}`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(updated)
-  });
-  alert('✅ تم حفظ التعديلات');
   fetchVideos();
-  bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
-}
-
-async function deleteVideo(id) {
-  if (!confirm('❌ هل أنت متأكد من حذف هذا الفيديو؟')) return;
-  await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
-  alert('🗑️ تم حذف الفيديو');
-  fetchVideos();
-}
-
-document.getElementById('departmentSelect').addEventListener('change', () => {
-  document.getElementById('searchInput').disabled = false;
-  renderVideos();
-});
-document.getElementById('searchInput').addEventListener('input', renderVideos);
-
-fetchVideos();
-
-// ✅ استدعاء login-modal.html عند تحميل الصفحة
-fetch('login-modal.html')
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById('loginContainer').innerHTML = html;
-  });
-</script>
+  </script>
 </body>
 </html>
