--- a/public/edit.html
+++ b/public/edit.html
@@ -7,77 +7,106 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
-      padding: 30px;
+      background-color: #f4f6fb;
+      padding: 20px;
       font-family: 'Segoe UI', sans-serif;
     }
     .video-card {
       background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-      margin-bottom: 15px;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 12px;
+      margin: 5px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-    iframe, video {
-      width: 100%;
-      height: 300px;
-      border-radius: 8px;
-      margin-top: 10px;
+    .video-card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     .video-title {
       font-weight: bold;
+      margin-bottom: 6px;
+      min-height: 48px;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     .video-description {
-      margin: 10px 0;
-      cursor: pointer;
       color: #0d6efd;
+      cursor: pointer;
+      min-height: 40px;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      margin-bottom: 8px;
+    }
+    .video-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+    video, iframe {
+      width: 100%;
+      height: 200px;
+      border-radius: 6px;
+    }
+    .sharepoint-frame {
+      width: 100%;
+      height: 200px;
+      border-radius: 6px;
+      display: block;
+      object-fit: cover;
     }
     .popout-button {
-      margin: 10px 0;
       background-color: #0d6efd;
       color: white;
       border: none;
-      padding: 5px 10px;
-      border-radius: 6px;
+      padding: 6px 12px;
+      border-radius: 5px;
       cursor: pointer;
+      margin-top: 6px;
     }
     .action-buttons {
-      margin-top: 10px;
       display: flex;
-      gap: 10px;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+    #editor {
+      height: 200px;
+      background: white;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3>تعديل الفيديوهات</h3>
-      <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
+  <div class="container text-center">
+    <h3 class="mb-4">إدارة وتعديل الفيديوهات</h3>
+    <div class="mb-3 d-flex justify-content-center gap-3">
+      <a href="add.html" class="btn btn-success">➕ إضافة فيديو جديد</a>
+      <a href="dashboard.html" class="btn btn-warning">🔐 لوحة التحكم</a>
     </div>
-
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <select id="departmentSelect" class="form-select">
-          <option value="">-- اختر القسم --</option>
-        </select>
-      </div>
-      <div class="col-md-8">
-        <input id="searchInput" class="form-control" type="text" placeholder="🔍 بحث عن فيديو" disabled>
-      </div>
-    </div>
-
-    <div id="videoContainer"></div>
+    <select id="departmentSelect" class="form-select mb-3" style="max-width: 300px; margin: auto;">
+      <option value="">-- اختر القسم --</option>
+    </select>
+    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
+    <div id="videoContainer" class="video-grid"></div>
   </div>
 
-  <!-- نافذة وصف الفيديو -->
+  <!-- نافذة عرض الوصف -->
   <div class="modal fade" id="descModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 id="descTitle" class="modal-title"></h5>
+          <h5 class="modal-title" id="descTitle"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
-        <div id="descContent" class="modal-body"></div>
+        <div class="modal-body" id="descContent" style="white-space: pre-wrap; text-align: justify;"></div>
       </div>
     </div>
   </div>
@@ -92,36 +121,28 @@
         </div>
         <div class="modal-body">
           <input type="hidden" id="editId">
-          <div class="mb-3">
-            <label class="form-label">العنوان</label>
-            <input id="editTitle" type="text" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">الرابط</label>
-            <input id="editUrl" type="text" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">الوصف</label>
-            <div id="editor"></div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">القسم</label>
-            <select id="editDeptSelect" class="form-select"></select>
-          </div>
+          <label>العنوان</label>
+          <input type="text" class="form-control mb-2" id="editTitle">
+          <label>الوصف</label>
+          <div id="editor"></div>
+          <label class="mt-3">رابط الفيديو</label>
+          <input type="text" class="form-control mb-2" id="editUrl">
+          <label>القسم</label>
+          <select class="form-select mb-2" id="editDeptSelect" required>
+            <option value="">-- اختر القسم --</option>
+          </select>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-primary" onclick="saveEdit()">💾 حفظ</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+          <button type="button" class="btn btn-primary" onclick="saveEdit()">حفظ</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- ✅ استدعاء نافذة تسجيل الدخول -->
-  <div id="loginModalContainer"></div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <!-- ✅ الحارس الموحد -->
+  <!-- ✅ حماية تسجيل الدخول -->
   <script src="login-guard.js"></script>
   <script>
   let videos = [];
