--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -71,6 +71,14 @@
 <!-- here-->
  <div class="col-md-4">
         <div class="dashboard-card">
+          <div class="card-icon">🔑</div> 
+          <a href="passwords.html">كلمات المرور</a>
+        </div>
+      </div>
+<!-- end here-->
+<!-- here-->
+ <div class="col-md-4">
+        <div class="dashboard-card">
           <div class="card-icon">👁️</div> 
           <a href="viewlinks.html">عرض الروابط</a>
         </div>
